.gsd/exec/b373b544-09f6-4ee5-b7cb-51569c42681a.stdout
   |                 ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/combat_coherence.rs:74:9
   |
74 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/combat_coherence.rs:92:9
   |
92 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/combat_coherence.rs:110:9
    |
110 |         SkillDef {
    |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/combat_coherence.rs:128:9
    |
128 |         SkillDef {
    |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/combat_coherence.rs:143:9
    |
143 |         SkillDef {
    |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/event_stream.rs:58:9
   |
58 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/event_stream.rs:79:9
   |
79 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/event_stream.rs:100:9
    |
100 |         SkillDef {
    |         ^^^^^^^^ missing `animation_sequence` and `qte`

For more information about this error, try `rustc --explain E0063`.
warning: `bevyrogue` (test "event_stream") generated 1 warning
error: could not compile `bevyrogue` (test "event_stream") due to 3 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
error[E0063]: missing fields `holy_support` and `twin_core` in initializer of `UnitDef`
   --> tests/tempo_resistance.rs:212:5
    |
212 |     bevyrogue::data::units_ron::UnitDef {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `holy_support` and `twin_core`

error[E0063]: missing fields `holy_support` and `twin_core` in initializer of `UnitDef`
   --> tests/tempo_resistance.rs:249:5
    |
249 |     bevyrogue::data::units_ron::UnitDef {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `holy_support` and `twin_core`

error: could not compile `bevyrogue` (test "bootstrap_spawn_composition") due to 6 previous errors
error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/encounter_e2e.rs:40:9
   |
40 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/encounter_e2e.rs:61:9
   |
61 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/encounter_e2e.rs:82:9
   |
82 |         SkillDef {
   |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/encounter_e2e.rs:103:9
    |
103 |         SkillDef {
    |         ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/ultimate_meter.rs:91:5
   |
91 |     SkillDef {
   |     ^^^^^^^^ missing `animation_sequence` and `qte`

error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
   --> tests/ultimate_meter.rs:112:5
    |
112 |     SkillDef {
    |     ^^^^^^^^ missing `animation_sequence` and `qte`

warning: `bevyrogue` (test "damage_breakdown_log") generated 1 warning
error: could not compile `bevyrogue` (test "damage_breakdown_log") due to 1 previous error; 1 warning emitted
warning: `bevyrogue` (test "encounter_e2e") generated 1 warning
error: could not compile `bevyrogue` (test "encounter_e2e") due to 4 previous errors; 1 warning emitted
error[E0063]: missing fields `animation_sequence` and `qte` in initializer of `SkillDef`
  --> tests/status_effect_integration.rs:85:5
   |
85 |     SkillDef {
   |     ^^^^^^^^ missing `animation_sequence` and `qte`

error: could not compile `bevyrogue` (test "tempo_resistance") due to 2 previous errors
warning: `bevyrogue` (test "ultimate_meter") generated 1 warning
error: could not compile `bevyrogue` (test "ultimate_meter") due to 2 previous errors; 1 warning emitted
warning: `bevyrogue` (test "status_effect_integration") generated 1 warning
error: could not compile `bevyrogue` (test "status_effect_integration") due to 1 previous error; 1 warning emitted
warning: `bevyrogue` (test "combat_coherence") generated 1 warning
error: could not compile `bevyrogue` (test "combat_coherence") due to 6 previous errors; 1 warning emitted
